--- a/views/coffee/index.ejs
+++ b/views/coffee/index.ejs
@@ -1,24 +1,39 @@
 <%- include('../partials/header') %>
-<hr>
-<br><br>
-<% if (coffees.length) { %>
-  <% coffees.forEach((coffee) => { %>
+<div class="index-wrapper">
+<hr class="coffee-card-hr">
+  <% if (coffees.length) { %>
+    <% coffees.forEach((coffee) => { %>
+  
+      <div class="coffee-card">
+  
+        <img class="coffee-user-icon"src="<%= coffee.user ? coffee.userAvatar : '/images/profile-user-svgrepo-com.svg' %>" referrerpolicy="no-referrer" alt="avatar">
 
-    <div class="coffee-card">
-      
-      <img class="google-icon"src="<%= coffee.user ? coffee.userAvatar : '/images/profile-user-svgrepo-com.svg' %>" referrerpolicy="no-referrer" alt="avatar">
-      <a class="coffee-link" href="/coffee/<%= coffee._id %>"><h1><%= coffee.name %></h1></a>
-      <h2><%= coffee.roaster %></h2>&nbsp;|&nbsp;<h2>Roast date: <%= coffee.roastDate.toISOString().slice(0, 10) %></h2>
-      <h4>Reviewed by: <%= coffee.user ? coffee.userName : 'anonymous' %></h4>
-      <p><%= coffee.initReview %></p>
-      <h3>Aroma: <%= coffee.aroma %> </h3><h3>Acidity: <%= coffee.acidity %></h3><h3>Body: <%= coffee.bodyRating %> </h3><h3>Balance: <%= coffee.balance %></h3><h3>Sweetness: <%= coffee.sweetness %></h3>
-      <% let total = coffee.aroma + coffee.acidity + coffee.bodyRating + coffee.balance + coffee.sweetness %>
-      <h3>Overall: <%= total*4 %> /100</h3>
 
-      <img class="coffee-img" src="<%= coffee.imageUrl %>" alt="coffee image">
-      <hr>
-    </div>
-  <% }) %>
-<% } %>
+        <div class="coffee-card-heading-wrapper">
+          <a class="coffee-link" href="/coffee/<%= coffee._id %>"><h1><%= coffee.name %></h1></a>
+          <h2 class="coffee-subheading"><%= coffee.roaster %>&nbsp;|&nbsp;Roast date: <%= coffee.roastDate.toISOString().slice(0, 10) %></h2>
+          <h4 class="coffee-card-user">Reviewed by: <%= coffee.user ? coffee.userName : 'anonymous' %></h4>
+        </div>
+
+        <p class="coffee-card-review"><span class="big-comma-1">,&nbsp;</span><%= coffee.initReview %></p>
+
+
+         <div class="scores-wrapper">
+           <h3 class="coffee-card-aroma">Aroma: <%= coffee.aroma %> </h3>
+           <h3 class="coffee-card-acidity">Acidity: <%= coffee.acidity %></h3>
+           <h3 class="coffee-card-body">Body: <%= coffee.bodyRating %> </h3>
+           <h3 class="coffee-card-balance">Balance: <%= coffee.balance %></h3>
+           <h3 class="coffee-card-sweetness">Sweetness: <%= coffee.sweetness %></h3>
+           <% let total = coffee.aroma + coffee.acidity + coffee.bodyRating + coffee.balance + coffee.sweetness %>
+           <h3 class="coffee-card-overall">Overall: <%= total*4 %> /100</h3>
+         </div>
+  
+        <img class="coffee-card-img" src="<%= coffee.imageUrl %>" alt="coffee image">
+       
+      </div>
+      <hr class="coffee-card-hr">
+    <% }) %>
+  <% } %>
+</div>
 
 <%- include('../partials/footer') %>
