--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,3 @@
-<footer><a href="https://github.com/clareysean">My Github (:˒ ▓▓</a></footer>
+<footer><a class="footer-txt" href="https://github.com/clareysean">My Github ꩜</a></footer>
 </body>
 </html>
