--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -115,11 +115,11 @@ input, .search-btn{
 
 .nav-menu{
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-evenly;
   align-items: center;
   justify-self: flex-end;
   gap: 63px;
-  padding-left: 0;
+  padding: 30px 0 30px 0;
 }
 
 .burger{
@@ -316,9 +316,10 @@ ul{
     transform: translateY(-10px) rotate(-45deg);
    }
    .nav-menu, .nav-menu-wrapper{
+    height: 170px;
     position: fixed;
     left: -100%;
-    top: 0;
+    top: -1%;
     gap: 0;
     flex-direction: column;
     background-color: var(--main-black);
@@ -332,6 +333,7 @@ ul{
 
    .nav-menu.active{
     left: 0;
+    top: 0;
     margin-top:0;
    }
 
@@ -345,17 +347,22 @@ ul{
 }
 
 .coffee-card{
-  display: grid;
-  grid-template-columns: repeat(6, 1fr) 2fr;
-  grid-template-rows: repeat(7, 50px);
-  margin: 40px 0 40px 0;
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  /* grid-template-columns: repeat(6, 1fr) 2fr;
+  grid-template-rows: repeat(7, 50px); */
+  margin: 30px 0 30px 0;
+  padding: 0 50px 0 50px;
 }
 
 .coffee-user-icon{
-  grid-column: 1;
-  grid-row: 1;
+  align-self: flex-start;
+  /* grid-column: 1;
+  grid-row: 1; */
   justify-self: center;
-  margin-top: 3px;
+  margin: 0px 50px auto 0;
 }
 
 .coffee-link{
@@ -363,42 +370,68 @@ ul{
   font-size: 1.2rem;
   text-decoration-line: underline;
   text-decoration-thickness: 2px;
+  opacity: 85%;
+}
+
+.coffee-card-user{
+  margin-top: 0;
+}
+
+.coffee-card-name-heading{
+  margin: -10px 0 0 0;
+ 
 }
 
 .coffee-card-heading-wrapper{
-  grid-row: 1;
-  margin: -30px 0 30px 0;
-  grid-column: 2;
+  /* grid-row: 1; */
+ align-self: flex-start;
+  min-width: 20%;
+  /* grid-column: 2; */
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
 }
 .coffee-link, .coffee-subheading{
-margin-top: auto;
+margin-top: 0;
 }
 
-.big-comma-1{
-  font-family: 'Times New Roman', Times, serif;
-  font-size: 6rem;
-  justify-self: start;
-  align-self: center;
-  opacity: 70%;
+.coffee-subheading{
+  text-align: center;
+}
+
+.comma-icon{
+  height: 30px;
+  opacity: 80%;
+  margin: 0 5px 5px -5px;
 }
 
 
 .coffee-card-review{
-  grid-column: 2 / span 3;
-  grid-row: 5;
-  justify-self: start;
-  align-self: center;
+ font-size: 1rem;
+ margin-top: 0;
+ text-align: left;
 }
 
 .coffee-card-img{
-  grid-column: 7;
-  grid-row: 1 / span 3;
-  height: 300px;
-  margin-bottom: 40px;
+  height: 200px;
+  margin: 0 0 0 50px;
+}
+.coffee-card-image-wrapper{
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  min-width: 30%;
+}
+
+.coffee-card-middle-column{
+  display: flex;
+  flex-direction: column;
+  align-self: flex-start;
+  align-items: flex-start;
+  justify-content: flex-start;
+  max-width: 35%;
+  margin: 0 0 30px 20px;
 }
 
 .scores-wrapper{
@@ -409,6 +442,97 @@ margin-top: auto;
   align-items: center;
   flex-wrap: wrap;
 }
+
+.scores-wrapper > h3{
+  font-size: 1.3rem;
+}
+
+@media(max-width:1118px){
+  .coffee-card-middle-column{
+    margin: 0;
+  }
+  /* .coffee-card-image-wrapper{
+    margin-top: -187px;
+  } */
+}
+
+
+@media(max-width:1719px){
+  
+    .coffee-card{
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      margin: 30px 0 30px 0;
+      padding: 0;
+    }
+  
+  .coffee-card-img{
+    margin: 0 0 20px 0;
+    height: 175px;
+  }
+}
+
+@media(max-width:1618px){
+  .coffee-card{
+    flex-direction: column;
+    gap:20px;
+  }
+  .coffee-card-middle-column{
+    margin: 0;
+    align-self: flex-start;
+    justify-content: flex-start;
+    align-items: flex-start;
+    max-width:none;
+  }
+  .coffee-card-image-wrapper{
+    flex-grow: 2;
+    justify-content: flex-start;
+    align-items: center;
+  }
+}
+
+@media(max-width:510px){
+  .coffee-card{
+    justify-content: center;
+    flex-direction: row;
+  }
+  .coffee-card-middle-column{
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    max-width:none;
+  }
+  .coffee-card-heading-wrapper{
+    margin: 10px 0 10px 0;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.6rem;
+  }
+  .coffee-user-icon{
+    margin: 0;
+  }
+  .coffee-card-review{
+    text-align: center;
+  }
+  .scores-wrapper{
+    justify-content: center;
+    flex-direction: column;
+    margin-bottom: 10px;
+    text-align: center;
+  }
+  .scores-wrapper > h3{
+    margin: 0;
+  }
+
+  .coffee-card-image-wrapper{
+    flex-grow: 2;
+    justify-content: center;
+    align-items: center;
+  }
+
+}
+
 
 .coffee-card-hr{
   height: 3px;
@@ -449,7 +573,7 @@ margin-top: auto;
   height: 300px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items:center;
 }
 
@@ -461,6 +585,8 @@ margin-top: auto;
   align-items:center;
   flex-wrap: wrap;
 }
+
+
 @media (max-width:1800px){
   .new-coffee-ratings-wrapper{
     width:70%;
@@ -556,6 +682,18 @@ margin-top: auto;
   align-items:center;
 }
 
+/* favourites page */
+
+.favourites-page-wrapper{
+  text-align: center;
+  padding: 50px 100px 50px 100px;
+}
+
+.delete-favourite-form-wrapper{
+  margin: 0 auto 0 0;
+  text-align: center;
+}
+
 
 
 @media (max-width: 770px){
@@ -593,7 +731,10 @@ margin-top: auto;
   }
 }
 
-
+.error-txt{
+  font-size: 1rem;
+  color: var(--secondary-orange);
+}
 
 footer{
   height: 30px;
