--- a/views/coffee/new.ejs
+++ b/views/coffee/new.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') %>
 <div class="new-coffee-page-wrapper">
   <% if (locals.errorMsg) { %>
-    <p><%= errorMsg %></p>
+    <p class="error-txt"><%= errorMsg %></p>
   <% } %>
   <form  class="new-coffee-form" action="/coffee" method="post" enctype="multipart/form-data" autocomplete="off">
       <h1 class="new-coffee-heading">Add a roast</h1>
